# iFoRsRadioServer

./: CMakeLists.txt  README.md
api/: def.h
api/internal/: def.h  model.h  server.h
cmake/: copy.cmake  options.cmake  utils.cmake
src/: main.cpp
src/core/: connectionmanager.cpp  connectionmanager.h  core.cpp  core.h
src/interface/: uinterface.cpp  uinterface.h
src/modules/radio/: radiostationscore.cpp  radiostationscore.h
src/modules/server/: serverstatuscore.cpp  serverstatuscore.h
src/network/: clienthandler.cpp  clienthandler.h  server.cpp  server.h
src/types/: logdef.h  types.h
src/utils/: config.cpp  config.h  filewatcher.cpp  filewatcher.h  jsonstorage.cpp  jsonstorage.h  parameterhandler.cpp  parameterhandler.h
